# stem-soccer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  investigation.ipynb
src/app/: main.cpp
src/config/: AssetsConfig.hpp  SimulationConfig.hpp  WindowConfig.hpp
src/football/: FootballGame.cpp  FootballGame.hpp  FootballPlayer.cpp
src/football/menu/: MenuButton.cpp  MenuButton.hpp  MenuState.cpp  MenuState.hpp
src/football/model/: BallModel.cpp  BallModel.hpp  MatchModel.cpp  MatchModel.hpp  PlayerModel.cpp  PlayerModel.hpp
src/football/simulation/: FootballArena.cpp  FootballArena.hpp  FootballBall.cpp  FootballBall.hpp  FootballPlayer.cpp  FootballPlayer.hpp  SimulationState.cpp  SimulationState.hpp
src/game/: Game.cpp  Game.hpp  GameData.cpp  GameData.hpp  State.cpp  State.hpp  StatesMachine.cpp  StatesMachine.hpp
src/game/managers/: AssetsManager.cpp  AssetsManager.hpp  InputManager.cpp  InputManager.hpp
src/graph/: DenseGraph.cpp  DenseGraph.hpp  Graph.cpp  Graph.hpp  SparseGraph.cpp  SparseGraph.hpp
src/menu/: MenuButton.cpp  MenuButton.hpp  MenuState.cpp  MenuState.hpp
src/simulation/: FootballGame.cpp  FootballGame.hpp  SimulationState.cpp  SimulationState.hpp  Utils.cpp  Utils.hpp
src/simulation/model/: BallModel.cpp  BallModel.hpp  MatchModel.cpp  MatchModel.hpp  PlayerModel.cpp  PlayerModel.hpp  PlayerStats.cpp  PlayerStats.hpp  TeamTactic.cpp  TeamTactic.hpp  TeamTacticFactory.cpp  TeamTacticFactory.hpp
src/simulation/view/: BallView.cpp  BallView.hpp  BallViewDrawer.cpp  BallViewDrawer.hpp  (+10 more)
